--- a/public/legacy/themes/suite8/css/suitep-base/email-templates.scss
+++ b/public/legacy/themes/suite8/css/suitep-base/email-templates.scss
@@ -7,7 +7,6 @@
     .action-buttons {
         position: absolute;
         right: 0;
-        margin-top: -3.3em;
     }
     .mandatory-txt {
         padding-top: 0.5em;
