--- a/public/legacy/themes/suite8/css/suitep-base/reports.scss
+++ b/public/legacy/themes/suite8/css/suitep-base/reports.scss
@@ -1,8 +1,9 @@
 .view-module-AOR_Reports {
-    .action_buttons{
-        margin-top: -1em;
-        top: -2.5em;
-    }
+    #EditView {
+        .buttons {
+            top: -0.8em;
+        }
+    }   
     .panel {
         margin-top: 0;
     }
